CSS fix for invisible list bullets.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,3 +26,8 @@ img.thumbnail {
 #featured {
     padding-right: 1em;
 }
+
+/* Unset list style to override theme suppression */
+ul {
+    list-style: unset;
+}
